manifests/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-telemeter-tls
  labels:
    prometheus: telemeter
  name: prometheus-telemeter
  namespace: telemeter
spec:
  ports:
  - name: https
    port: 9091
    targetPort: https
  selector:
    app: prometheus
    prometheus: telemeter
  type: ClusterIP
