manifests/prometheus/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: prometheus-telemeter
  namespace: telemeter
spec:
  port:
    targetPort: https
  tls:
    termination: Reencrypt
  to:
    kind: Service
    name: prometheus-telemeter
